--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,10 @@
 * {
+  font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
 
 body {
+  background-color: rgb(0, 0, 0);
   overflow-x: hidden;
 }
