--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -1,32 +1,34 @@
-.home-page {
+.home-section {
   align-items: center;
+  color: #fff;
   display: flex;
-  height: 84vh;
+  justify-content: space-evenly;
+  letter-spacing: 3px;
+  min-height: 84vh;
 }
 
-.home-section {
+.home-info-container {
   background-color: #23232e;
   border-radius: 50px;
-  color: #fff;
   font-size: 25px;
-  letter-spacing: 3px;
-  margin: 0 auto;
   max-width: 505px;
   padding: 30px;
   width: 70%;
 }
 
-.home-section article p {
+.home-info-container article p {
   margin: 20px 0;
 }
 
-.home-section a {
-  letter-spacing: 1px;
+.home-info-container a {
+  color: #fff;
   font-weight: bold;
+  letter-spacing: 1px;
+  text-decoration: none;
 }
 
-@media (max-width: 339px) {
-  .home-section article {
+@media (max-width: 340px) {
+  .home-info-container article {
     font-size: 20px;
   }
 }
