--- a/src/css/pages/projects.css
+++ b/src/css/pages/projects.css
@@ -1,15 +1,14 @@
 .projects-section {
   align-items: center;
-  color: #fff;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   letter-spacing: 3px;
   min-height: 84vh;
-  justify-content: space-evenly;
   width: 100vw;
 }
 
-.projects {
+.projects-container {
   background-color: #23232e;
   border-radius: 50px;
   padding: 10px 0 30px;
@@ -17,12 +16,12 @@
   width: 70%;
 }
 
-.projects h1 {
+.projects-container h1 {
   font-size: 30px;
   margin-bottom: 15px;
 }
 
-.projects ul li {
+.projects-container ul li {
   border-top: 3px solid black;
   border-bottom: 3px solid black;
   list-style: none;
@@ -30,30 +29,42 @@
   padding: 10px 0;
 }
 
-.projects div {
+.projects-container div {
   align-items: center;
   display: flex;
   justify-content: space-evenly;
 }
 
-.projects div h2 {
+.projects-container div h2 {
   width: 325px;
 }
 
-.projects div a {
+.projects-container div a {
+  color: #fff;
   font-size: 25px;
+  text-decoration: none;
+}
+
+@media (max-width: 400px) {
+  .projects-container div h2 {
+    font-size: 20px;
+  }
+
+  .projects-container div a {
+    font-size: 20px;
+  }
 }
 
 @media (max-width: 1300px) {
-  .projects {
+  .projects-container {
     margin: 5vh auto;
   }
 
-  .projects div {
+  .projects-container div {
     flex-direction: column;
   }
 
-  .projects div a {
-    margin-top: 10px;
+  .projects-container div a {
+    margin-top: 15px;
   }
 }
