--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -59,10 +59,11 @@
 @media (max-width: 400px) {
   .name {
     font-size: 15px;
+    letter-spacing: 3px;
   }
 }
 
-@media (max-width: 999px) {
+@media (max-width: 1000px) {
   .mobile-menu {
     display: block;
   }
@@ -71,18 +72,19 @@
     align-items: center;
     background-color: #23232e;
     flex-direction: column;
-    height: 100%;
-    justify-content: space-around;
+    height: 92vh;
+    justify-content: space-evenly;
     position: absolute;
     right: 0;
     top: 8vh;
     transform: translateX(100vw);
     transition: transform 0.3s ease-in;
-    width: 50vw;
+    width: 100vw;
   }
 
   .link-list li {
-    margin-left: 0;
+    font-size: 25px;
+    margin: 0;
     opacity: 0;
   }
 
