--- a/src/css/pages/home.css
+++ b/src/css/pages/home.css
@@ -24,6 +24,11 @@
   font-weight: bold;
   letter-spacing: 1px;
   text-decoration: none;
+  transition: 0.3s;
+}
+
+.home-info-container a:hover {
+  opacity: 0.7;
 }
 
 @media (max-width: 340px) {
