--- a/src/css/pages/projects.css
+++ b/src/css/pages/projects.css
@@ -43,6 +43,11 @@
   color: #fff;
   font-size: 25px;
   text-decoration: none;
+  transition: 0.3s;
+}
+
+.projects-container div a:hover {
+  opacity: 0.7;
 }
 
 @media (max-width: 400px) {
